# themis

./: README.md  main.py  pre-commit.sh  pyproject.toml
core/: participant.py  team.py  themis.py  utils.py
